--- a/hw5_2023.ipynb
+++ b/hw5_2023.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1109,
+   "execution_count": 3,
    "id": "05ff320c-517a-45da-99a8-ca87efc419a7",
    "metadata": {},
    "outputs": [],
@@ -530,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the residuals plot we can see at lower timesteps (from t 0 to t = 4) applying the weigthing results in a better fit. For t = 5 and  t = 5, the fit of the weighted method becomes worse than stock Newton Gauss as indicated by a higher difference from the real data indicated by the checked orange line. This indicates that in some ranges, choosing the right weighting can help optimize the fit, however a wrong choice can also worsen the fit for another range of values. Thus, one should try to find an accurate model so that the weighting results in the best fit for the range of interest and should clearly communcate that results may differ outside the range specified. This time, a heuristic estimate of the standard deviation, instead of the real SD was chosen where the SD is said to be valued at 0.05, meaning it scales with the size of the datapoint. This means that small values of t (and thus y_{i}), the error is small, and for large values of t (y_{i}), the error will become larger as can be seem from the plot."
+    "From the residuals plot we can see at lower timesteps (from $t = 0$ to $t = 4$) that the effect of applying the weigthing results in a better fit. For values of $t = 5$ and  $t = 5$, the fit of the weighted method becomes less accurate than the stock Newton-Gauss method, as indicated by a higher difference with respecto to the real data shown in the checked orange line. This indicates that for some ranges, choosing the right weighting can help optimize the fit, but that a wrong choice can also worsen the fit for a different range of values. Thus, one should try to find an accurate model so that the weighting results in the best fit for the entire range of interest and clearly specify whenever the results may differ outside the range specified. In this case a heuristic estimate of the standard deviation was chosen instead of the real SD, where the SD is said to be valued at $0.05$, meaning it scales with the size of the datapoints. This means that for small values of $t$ (and thus $y_{i}$), the error is small, and for large values of $t$ (and again thus $y_{i}$ as well), the error will become larger, as the plot illustrates."
    ]
   },
   {
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1121,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -598,20 +598,22 @@
      "text": [
       "x: [  1.17809725   0.90757121   1.04719755 172.         146.\n",
       " 165.        ]\n",
-      "h: [-1.17809725e+00  2.23402144e+00 -1.04719755e+00  2.07081497e-05\n",
-      "  1.12433439e-05 -1.14600873e-05]\n",
-      "x_hat [-4.44089210e-16  3.14159265e+00 -4.44089210e-16  1.72000021e+02\n",
-      "  1.46000011e+02  1.64999989e+02]\n",
+      "h: [-0.01169253 -0.01231162  0.0327308   0.00020509  0.00013419 -0.00033255]\n",
+      "x_hat [  1.16640471   0.89525959   1.07992835 172.00020509 146.00013419\n",
+      " 164.99966745]\n",
       "\n",
       "Angle sum verification: True\n",
       "Sine theorem verification: True\n",
-      "Cosine theorem verification: False\n"
+      "Cosine theorem verification: True\n"
      ]
     }
    ],
    "source": [
     "# Define measurement of triangle\n",
     "x = np.array([radians(67.5),radians(52),radians(60),172,146,165]) \n",
+    "\n",
+    "# Define the tolerance of the convergence and validation\n",
+    "tolerance = 1e-8\n",
     "\n",
     "# Make innitial guess of the correction term h\n",
     "h0 = np.random.normal(0, 0.5, 6) \n",
@@ -625,7 +627,7 @@
     "function = lambda h: np.linalg.norm(h)**2\n",
     "\n",
     "# Minimize h with the constraints\n",
-    "optimization = sp.optimize.minimize(function, h0, method='SLSQP', constraints=constraints)\n",
+    "optimization = sp.optimize.minimize(function, h0, method='SLSQP', constraints=constraints,tol=tolerance)\n",
     "\n",
     "# Retrieve optimized h value\n",
     "h = optimization.x\n",
@@ -634,9 +636,9 @@
     "x_hat = x + h\n",
     "\n",
     "# Define the validation functions\n",
-    "angle_sum_verification = lambda x_hat: np.isclose(x_hat[0]+x_hat[1]+x_hat[2],np.pi)\n",
-    "sine_theorem_verification = lambda x_hat: np.isclose(x_hat[3]*np.sin(x_hat[1]) + x_hat[4]*np.sin(x_hat[2]), x_hat[4]*np.sin(x_hat[0]) + x_hat[5]*np.sin(x_hat[1]))\n",
-    "cosine_theorem_verification = lambda x_hat: np.isclose(x_hat[5]**2, + x_hat[3]**2 + x_hat[4]**2 - 2*x_hat[3]*x_hat[4]*np.cos(x_hat[2]))\n",
+    "angle_sum_verification = lambda x_hat: np.isclose(x_hat[0]+x_hat[1]+x_hat[2],np.pi,atol=tolerance)\n",
+    "sine_theorem_verification = lambda x_hat: np.isclose(x_hat[3]*np.sin(x_hat[1]) + x_hat[4]*np.sin(x_hat[2]), x_hat[4]*np.sin(x_hat[0]) + x_hat[5]*np.sin(x_hat[1]),atol=tolerance)\n",
+    "cosine_theorem_verification = lambda x_hat: np.isclose(x_hat[5]**2, + x_hat[3]**2 + x_hat[4]**2 - 2*x_hat[3]*x_hat[4]*np.cos(x_hat[2]),atol=tolerance)\n",
     "\n",
     "# Print results\n",
     "print('x:',x)\n",
@@ -646,6 +648,37 @@
     "print('Angle sum verification:',angle_sum_verification(x_hat))\n",
     "print('Sine theorem verification:',sine_theorem_verification(x_hat))\n",
     "print('Cosine theorem verification:',cosine_theorem_verification(x_hat))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fails in 10000 runs: 0 0 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# EXTRA VALIDATION: Do many runs to ensure that verifications are always satisfied\n",
+    "runs = 10000\n",
+    "fail_1 = runs\n",
+    "fail_2 = runs\n",
+    "fail_3 = runs\n",
+    "\n",
+    "for i in range(runs):\n",
+    "    optimization = sp.optimize.minimize(function, h0, method='SLSQP', constraints=constraints,tol=tolerance)\n",
+    "    h = optimization.x\n",
+    "    x_hat = x + h\n",
+    "    fail_1 -= int(angle_sum_verification(x_hat))\n",
+    "    fail_2 -= int(sine_theorem_verification(x_hat))\n",
+    "    fail_3 -= int(cosine_theorem_verification(x_hat))\n",
+    "\n",
+    "print('Fails in',runs,'runs:',fail_1,fail_2,fail_3)"
    ]
   },
   {
@@ -696,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1123,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -705,13 +738,13 @@
      "text": [
       "x: [  1.17809725   0.90757121   1.04719755 172.         146.\n",
       " 165.        ]\n",
-      "h: [-1.17809724  2.23402144 -1.04719755  0.17989898  0.0433374  -1.09597695]\n",
-      "x_hat [ 1.24414701e-10  3.14159265e+00 -7.69877495e-11  1.72179899e+02\n",
-      "  1.46043337e+02  1.63904023e+02]\n",
+      "h: [-2.3352101  -1.79054178  4.13447853 -0.9031691  -1.62741141  1.65791588]\n",
+      "x_hat [ -1.15711286  -0.88297057   5.18167608 171.0968309  144.37258859\n",
+      " 166.65791588]\n",
       "\n",
       "Angle sum verification: True\n",
-      "Sine theorem verification: False\n",
-      "Cosine theorem verification: False\n"
+      "Sine theorem verification: True\n",
+      "Cosine theorem verification: True\n"
      ]
     }
    ],
@@ -720,7 +753,7 @@
     "function_improved = lambda h: np.linalg.norm(100*h[0]+100*h[1]+100*h[2]+h[3]+h[4]+h[5])**2\n",
     "\n",
     "# Minimize h with the improved function\n",
-    "optimization = sp.optimize.minimize(function_improved, h0, method='SLSQP', constraints=constraints)\n",
+    "optimization = sp.optimize.minimize(function_improved, h0, method='SLSQP', constraints=constraints,tol=tolerance)\n",
     "h = optimization.x\n",
     "x_hat = x + h\n",
     "\n",
@@ -732,6 +765,37 @@
     "print('Angle sum verification:',angle_sum_verification(x_hat))\n",
     "print('Sine theorem verification:',sine_theorem_verification(x_hat))\n",
     "print('Cosine theorem verification:',cosine_theorem_verification(x_hat))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fails in 10000 runs: 0 0 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# EXTRA VALIDATION: Do many runs to ensure that verifications are always satisfied\n",
+    "runs = 10000\n",
+    "fail_1 = runs\n",
+    "fail_2 = runs\n",
+    "fail_3 = runs\n",
+    "\n",
+    "for i in range(runs):\n",
+    "    optimization = sp.optimize.minimize(function_improved, h0, method='SLSQP', constraints=constraints,tol=tolerance)\n",
+    "    h = optimization.x\n",
+    "    x_hat = x + h\n",
+    "    fail_1 -= int(angle_sum_verification(x_hat))\n",
+    "    fail_2 -= int(sine_theorem_verification(x_hat))\n",
+    "    fail_3 -= int(cosine_theorem_verification(x_hat))\n",
+    "\n",
+    "print('Fails in',runs,'runs:',fail_1,fail_2,fail_3)"
    ]
   },
   {
@@ -787,7 +851,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
