--- a/hw6_2023.ipynb
+++ b/hw6_2023.ipynb
@@ -252,6 +252,68 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Answer**\n",
+    "\n",
+    "We want to prove the main equation $E_2 = C(I_1-I_2)$ and find $C$. \n",
+    "\n",
+    "For this, let's first evaluate $I_1$ and $I_2$:\n",
+    "\n",
+    "$I_1=\\frac{(b-a)}{2}\\cdot(f(a)+f(b))$\n",
+    "\n",
+    "$I_2=\\frac{(b-a)}{2}\\cdot(\\frac{f(a)}{2}+f(m)+\\frac{f(b)}{2})$\n",
+    "\n",
+    "We also define the error of $I_2$ as\n",
+    "\n",
+    "$E_2 = I_2 - I$\n",
+    "\n",
+    "In order to compute $E_2$, we approximate $I$ with the midpoint expansion of $[a,b]$ ($m$ now representing the midpoint at $\\frac{a+b}{2}$), disregaring the higher order terms (see Heath p.346):\n",
+    "\n",
+    "$I = I(f)=f(m)(b-a) + \\frac{f^{''}(m)}{24}(b-a)^3 + \\frac{f^{''''}(m)}{1920}(b-a)^5 + ... $\n",
+    "\n",
+    "\n",
+    "\n",
+    "$ \\therefore I \\thickapprox f(m)(b-a)$\n",
+    "\n",
+    "We now need to solve for $f(m)$, for which we consider the Taylor series of $f(x)$, disregaring the higher order terms again::\n",
+    "\n",
+    "$f(x)=f(m) + \\frac{f^{'}(m)}{1}(x-m) + \\frac{f^{''}(m)}{2}(x-m)^2 + \\frac{f^{'''}(m)}{6}(x-m)^3 ...$ (\n",
+    "\n",
+    "$ \\therefore f(x) \\thickapprox f(m)$\n",
+    "\n",
+    "Adding $f(a)$ and $f(b)$ and solving for $f(m)$\n",
+    "\n",
+    "$f(a)+f(b)=2f(m)$\n",
+    "\n",
+    "$ \\therefore f(m) = \\frac{1}{2}(f(a)+f(b))$\n",
+    "\n",
+    "\n",
+    "Substituting $f(m)$ into $I(f)$\n",
+    "\n",
+    "$I = \\frac{1}{2}(f(a)+f(b))(b-a)$\n",
+    "\n",
+    "$ \\therefore I = I_1$\n",
+    "\n",
+    "Observing the left side of the main equation\n",
+    "\n",
+    "$ E_2 = I_2 - I = I_2 - I_1 = \\frac{(b-a)}{2}\\cdot(\\frac{f(a)}{2} + f(m) + \\frac{f(b)}{2} -f(a) -f(b)) $\n",
+    "\n",
+    "$ \\therefore E_2 = \\frac{(b-a)}{2}\\cdot(-\\frac{f(a)}{2} + f(m) - \\frac{f(b)}{2}  ) = \\frac{-(b-a)}{2}\\cdot(\\frac{f(a)}{2} - f(m) + \\frac{f(b)}{2}  )$\n",
+    "\n",
+    "$ \\therefore E_2 = -1(I_1-I_2)$\n",
+    "\n",
+    "Finally\n",
+    "\n",
+    "$E_2 = C(I_1-I_2) \\leftrightarrow -1(I_1 - I_2 ) = C(I_1-I_2) \\leftrightarrow$\n",
+    "\n",
+    "$ C = -1 $\n",
+    "\n",
+    "$\\square$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6979c60b-8ecd-45bd-8b88-acecfdd03940",
    "metadata": {},
    "source": [
