Code for (c) and (d)
Only text left :)

--- a/hw6_2023.ipynb
+++ b/hw6_2023.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
     "\n",
     "    if err_trap < epsilon:\n",
     "        print('<',epsilon)\n",
-    "        print('Done!, k=',k)\n",
+    "        print('Done!, k =',k)\n",
     "        break"
    ]
   },
@@ -328,7 +328,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recursive_integral(f,a,b,tolerance):\n",
+    "    # Using the algorithm (c)\n",
+    "    I1 = ((b-a)/2) * (f(a) + f(b))\n",
+    "    I2 = ((b-a)/2) * (f(a)/2 + f((a+b)/2) + f(b)/2)\n",
+    "\n",
+    "    # Using the formula from (b)\n",
+    "    E2 = -(I1-I2)\n",
+    "\n",
+    "    if np.abs(E2) < tolerance:\n",
+    "        return I2\n",
+    "    else:\n",
+    "        return recursive_integral(f,a,(a+b)/2,tolerance/2) + recursive_integral(f,(a+b)/2,b,tolerance/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value: 50.000594757608695\n",
+      "Exact error: 0.0006447576087040829\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1/10\n",
+    "b = 100\n",
+    "epsilon = 1/100\n",
+    "\n",
+    "value = recursive_integral(func,a,b,epsilon)\n",
+    "exact_error = np.abs(real_value - value)\n",
+    "\n",
+    "print('Value:',value)\n",
+    "print('Exact error:',exact_error)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: Explain why this exact error, its relationship with epsilon and maybe the number of subdivisions?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "8f66a8b2-02e4-4ab0-9801-709b3d6d085f",
    "metadata": {},
    "outputs": [],
@@ -422,6 +482,115 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the global variable\n",
+    "FUNCTION_CALLS = 0\n",
+    "\n",
+    "# Update the function by letting it know that the variable FUNCTION_CALLS\n",
+    "# refers to the global variable in order to update it\n",
+    "def func(x):\n",
+    "    global FUNCTION_CALLS\n",
+    "    FUNCTION_CALLS += 1\n",
+    "    return x**-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recursive_integral_optimized(f,a,b,tolerance,f_a,f_b):\n",
+    "    # TODO: Number of function evaluations is counted and no unnecesary evals are performed\n",
+    "    # Count func evals \n",
+    "\n",
+    "    # Optimization 1: Call f(a) and f(b) once for each recursive function call\n",
+    "    f_a = f_a\n",
+    "    f_b = f_b\n",
+    "\n",
+    "    # Optimization 2: Set f(a) and f(b) as parameters such that it is \n",
+    "    # only need to compute one call to f for each iteration\n",
+    "    # Notice f(m) is still necessary for I2, so we must use it\n",
+    "    f_m = f((a+b)/2)\n",
+    "\n",
+    "    # Using the algorithm (c)\n",
+    "    I1 = ((b-a)/2) * (f_a + f_b)\n",
+    "    I2 = ((b-a)/2) * (f_a/2 + f_m + f_b/2)\n",
+    "\n",
+    "    # Using the formula from (b)\n",
+    "    E2 = -(I1-I2)\n",
+    "\n",
+    "    if np.abs(E2) < tolerance:\n",
+    "        return I2\n",
+    "    else:\n",
+    "        # Send the f_m to next iterations\n",
+    "        return recursive_integral_optimized(f,a,(a+b)/2,tolerance/2,f_a,f_m) + recursive_integral_optimized(f,(a+b)/2,b,tolerance/2,f_m,f_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original function calls: 26625\n",
+      "Optimized function calls: 5327\n",
+      "\n",
+      "Improvement: 499.8122770790314 %\n",
+      "\n",
+      "Values still the same? True\n",
+      "Errors still the same? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1/10\n",
+    "b = 100\n",
+    "epsilon = 1/100\n",
+    "\n",
+    "# Reset counter\n",
+    "FUNCTION_CALLS = 0\n",
+    "\n",
+    "# First count calls to original function\n",
+    "value = recursive_integral(func,a,b,epsilon)\n",
+    "exact_error = np.abs(real_value - value)\n",
+    "calls = FUNCTION_CALLS\n",
+    "\n",
+    "print('Original function calls:', FUNCTION_CALLS)\n",
+    "#print('Value:',value)\n",
+    "#print('Exact error:',exact_error)\n",
+    "\n",
+    "# Reset counter\n",
+    "FUNCTION_CALLS = 0\n",
+    "\n",
+    "# Call the new function\n",
+    "value2 = recursive_integral_optimized(func,a,b,epsilon,func(a),func(b))\n",
+    "exact_error2 = np.abs(real_value - value2)\n",
+    "calls2 = FUNCTION_CALLS\n",
+    "\n",
+    "print('Optimized function calls:', FUNCTION_CALLS)\n",
+    "print()\n",
+    "print('Improvement:',(calls/calls2)*100,'%')\n",
+    "print()\n",
+    "print('Values still the same?',value == value2)\n",
+    "print('Errors still the same?',exact_error == exact_error2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: Some comments about it and the recursiveness"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "280bce8f-5bb7-4900-9813-6b29149dd011",
    "metadata": {},
@@ -432,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,6 +674,13 @@
    "cell_type": "markdown",
    "id": "4384b2a4-1738-440c-bc1a-9531dca3e126",
    "metadata": {},
+   "source": [
+    "TODO: Give example of functions... Look at Heath etc..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
@@ -524,7 +700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
