small intermediate step added to proof of 1b

--- a/homework6_PabloRodriguezAlves15310191NitaiNijholt12709018.ipynb.ipynb
+++ b/homework6_PabloRodriguezAlves15310191NitaiNijholt12709018.ipynb.ipynb
@@ -318,7 +318,11 @@
     "\n",
     "$T(f) = I_1$\n",
     "\n",
-    "$2I_2 = I_1 + M(f)$, yielding $M(f) = 2I_2-I_1$\n",
+    "$2I_2 - I_1  = \\frac{(b-a)}{2}\\cdot(f(a)+2 f(m)+f(b)) - \\frac{(b-a)}{2}\\cdot(f(a)+f(b)) = $\n",
+    "\n",
+    "$ 2I_2 - I_1  =\\frac{(b-a)}{2}(2f(m)) = (b-a) \\cdot f(m) = M(f)$\n",
+    "\n",
+    "yielding $M(f) = 2I_2-I_1$\n",
     "\n",
     "Therefore\n",
     "\n",
